new project name

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Balão &mdash; Página de teste</title>
+  <title>Notificação Lomadee &mdash; Página de teste</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <h1>Balão &mdash; Página de teste</h1>
+  <h1>Notificação Lomadee &mdash; Página de teste</h1>
 
   <h2>Rolândia</h2>
 
@@ -77,6 +77,6 @@
       sourceId: 1
     }
   </script>
-  <script src="notificacao.js"></script>
+  <script src="./notificacao-lomadee.min.js"></script>
 </body>
 </html>
