last updates. adds tooling

--- a/public/frameads.html
+++ b/public/frameads.html
@@ -7,7 +7,7 @@
   </head>
 	<body>
 
-    <div class="Widget350x130" id="all_holder">
+    <div id="all_holder">
       <ul class="offers" id="offers-0">
         <li class="loading">Carregando...</li>
       </ul>
