--- a/src/test.html
+++ b/src/test.html
@@ -74,7 +74,7 @@
 
   <script>
     var _LomadeeNotificacaoJS = {
-      sourceId: 1
+      sourceId: 36133587
     }
   </script>
   <script src="notificacao.js"></script>
